# simple-adder

./: .gitignore  DEPLOYMENT.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
simple_adder/: __init__.py  adder.py
tests/: __init__.py  test_adder.py
tests_integration/: README.md  __init__.py  test_installed_package.py
